# KnowledgeManagerLLM

./: .env.example  .gitignore  README.md  pyproject.toml  todo.md
data/: therapy.json
data/medicines/: aspirina.md  aulin.md  tachipirina.md  valium.md
data/patients/1/: conflict_resolutions.json  history.json  preferences.json  therapy.json
data/patients/2/: history.json  preferences.json  therapy.json
src/: chat.py  chat_interface.py  config_loader.py  database.py  log_debugger.py  main.py  prompts.py  session_extractor.py  sql_db.py  tools.py  utils.py  vector_db.py
src/agents/: agent.py  check_agent.py  therapy_manager_agent.py
