[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KnowledgeManagerLLM"
version = "0.1.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "psutil==7.2.2"
]
