[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KnowledgeManagerLLM"
version = "0.1.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "psutil==7.2.2",
    "streamlit"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.optional-dependencies]
dev = [
    "ruff"
]